# MY-CODES-WITH-SQL-INTEGRATED

./: CMakeCache.txt  CMakeLists.txt  HelloSQLite  Main  Makefile  README.md  cmake_install.cmake  compile_commands.json  config.txt  data.db
include/: charToString.hpp  myDatabase.hpp
src/: main.cpp
